[package]
name = "android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "time", "full"] }
uuid = { version = "1.3.4", features = ["v4"] }

[dependencies.core]
path = "../core"
