[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dump = []

[dependencies]
chrono = "0.4.26"
once_cell = "1.18.0"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "time", "full"] }
uuid = { version = "1.3.4", features = ["v4"] }
quinn = "0.10.2"
rustls = { version = "0.21.6", default-features = false, features = ["quic", "dangerous_configuration"] }
rcgen = "0.11.1"
macro-log = "0.2.0"
