[package]
name = "oneport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dump = []

[dependencies]
once_cell = "1.18.0"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "time", "full"] }
yaml-rust = "0.4.5"                  # The missing YAML 1.2 parser for rust
axum = "0.6.18"

[dependencies.core]
path = "../core"
